# nestastic

./: .gitignore  README.md  demo.s  install_deps.sh  meson.build
src/: imgui_memory_editor.h  main.cpp
src/emu/: irq.h
src/emu/APU/: AudioPlayer.h  apu.cpp  apu.h  constants.h  divider.h  dmc.cpp  dmc.h  frame_counter.cpp  frame_counter.h  noise.cpp  noise.h  pulse.cpp  pulse.h  pulse_units.h  timer.h  triangle.cpp  triangle.h  units.cpp  units.h
src/emu/CPU/: 6502.cpp  6502.h  6502_ops.inc  CPU.cpp  CPU.h  opcodes.h
src/emu/PPU/: ppu.cpp  ppu.h
src/emu/bus/: bus.cpp  bus.h
src/emu/cartridge/: cartridge.cpp  cartridge.h
src/emu/cpu/: 6502.cpp  6502.h  6502_ops.inc  opcodes.h
src/emu/mapper/: mapper.cpp  mapper.h
src/emu/mapper/000/: 000.cpp  000.h
src/emu/mapper/001/: 001.cpp  001.h
src/emu/mapper/002/: 002.cpp  002.h
test_code/: SmoothMarioBros.ips  imm_arith.s
